# vacancy-checker

./: .env.template  .gitignore  Makefile  docker-compose.yaml
api-gateway/: pyproject.toml
api-gateway/src/gateway/entrypoint/web/: __main__.py  application.py  cli.py
api-gateway/src/gateway/entrypoint/web/configs/: gateway.py  web.py
api-gateway/src/gateway/presentation/web/controllers/: __init__.py  healthcheck.py  proxy.py
auth/: .env.local  .gitignore  mypy.ini  pyproject.toml
auth/src/auth/: __init__.py
auth/src/auth/application/common/dto/: token_dto.py
auth/src/auth/application/ports/: __init__.py  password_hasher.py  time_provider.py
auth/src/auth/application/ports/auth/: __init__.py  auth_context.py  authentication.py  token_service.py
auth/src/auth/application/ports/broker/: __init__.py  producer.py
auth/src/auth/application/ports/cqrs/: handlers.py  resolver.py  sender.py
auth/src/auth/domain/common/: domain_errors.py  value_objects.py
auth/src/auth/domain/credential/: __init__.py
auth/src/auth/domain/credential/const/: validation.py
auth/src/auth/domain/credential/value_objects/: __init__.py
auth/src/auth/domain/shared_kernel/value_objects/: __init__.py  (+2 more)
auth/src/auth/domain/token/: entity.py  repository.py
auth/src/auth/entrypoint/web/: __main__.py  application.py  cli.py
auth/src/auth/infrastructure/adapters/: __init__.py  password_hasher.py  time_provider.py
auth/src/auth/infrastructure/mediator/: dishka.py  mediator.py  registry.py
auth/src/auth/presentation/cli/: migrations.py  server_start.py
search/: .gitignore  Dockerfile  env.template  mypy.ini  pyproject.toml  ruff.toml
search/src/search/: __init__.py
search/src/search/application/ports/: id_generator.py  logger.py
search/src/search/domain/events/: search_job_events.py  search_profile_events.py
search/src/search/domain/ports/: value_object.py
search/src/search/domain/search_job/: entity.py  repository.py
search/src/search/domain/search_profile/: entity.py  repository.py
search/src/search/entrypoint/web/: __main__.py  application.py
search/src/search/infrastructure/adapters/: __init__.py  time_provider.py
search/src/search/infrastructure/mediator/: __init__.py  dishka.py  mediator.py  registry.py
search/src/search/presentation/cli/: migrations.py  server_start.py
user/: .env.local  env.template  mypy.ini  pyproject.toml  ruff.toml
user/src/user/domain/ports/: __init__.py  entitiy.py
user/src/user/domain/user/: __init__.py  entity.py  repository.py
user/src/user/entrypoint/web/: application.py  cli.py
user/src/user/infrastructure/adapters/: id_generator.py
user/src/user/infrastructure/mediator/: dishka.py
user/src/user/presentation/cli/: migrations.py  server_start.py
(+540 files in other folders)
