[project]
name = "gateway"
version = "0.1.0"
description = "API Gateway — reverse proxy for auth, user, search, vacancy services"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.137.0",
    "httpx>=0.28.0",
    "uvicorn>=0.49.0",
    "structlog>=26.1.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.17",
]

[project.scripts]
gateway-cli = "gateway.entrypoint.web.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
